Kubernetes-Cloud/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster
  labels:
    name: togglemaster
    environment: production
